<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mvvmstructure.ui.home.HomeFragment"
        android:label="@string/home_actionbar_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.mvvmstructure.ui.search.SearchFragment"
        android:label="@string/search_actionbar_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.example.mvvmstructure.ui.bookmark.BookmarkFragment"
        android:label="@string/bookmark_actionbar_title"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_bookmarkFragment_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mvvmstructure.ui.login.LoginFragment"
        android:label="@string/login_actionbar_title"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/productFragment"
        android:name="com.example.mvvmstructure.ui.product.ProductFragment"
        android:label="@string/product_actionbar_title"
        tools:layout="@layout/fragment_product">
        <argument
            android:name="id"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

</navigation>